--- a/package.json
+++ b/package.json
@@ -19,21 +19,25 @@
   ],
   "author": "Luan Hubner",
   "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/module-alias": "^2.0.1",
-    "@types/node": "^17.0.18",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "jest": "^27.5.1",
-    "supertest": "^6.2.2",
-    "ts-jest": "^27.1.3",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
-  },
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
+    "@types/express": "^4.17.13",
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
     "module-alias": "^2.2.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/module-alias": "^2.0.1",
+    "@types/node": "14",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.5.0",
+    "jest": "^27.4.5",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.4"
   }
 }
