--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
+    "test:functional": "jest --projects ./test --runInBand",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:functional": "jest --projects ./test --runInBand"
+    "style:check": "prettier --check src/**/*.ts test/**/*.ts",
+    "style:fix": "prettier --write src/**/*.ts test/**/*.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "nodejs",
@@ -35,6 +37,7 @@
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.5.0",
     "jest": "^27.4.5",
+    "prettier": "^2.5.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
