--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "yarn build && node dist/src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
     "test:functional": "jest --projects ./test --runInBand",
+    "test:unit": "jest",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
@@ -24,6 +25,7 @@
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
     "@types/express": "^4.17.13",
+    "axios": "^0.26.0",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "module-alias": "^2.2.2"
